fixed the issue with cart link and user account link not aligning properly

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,14 +10,30 @@ html {
     width: fit-content;
 }
 
+.text-black {
+    color: black !important;
+}
+
+/* User account and cart links */
 .user-links {
     display: inline-flex;
     align-items: center;
 }
 
-.text-black {
-    color: black !important;
+.user-links li {
+    margin-right: 1rem;
 }
+
+.user-links a {
+    display: inline-flex;
+    align-items: center;
+}
+
+.user-links a p {
+    margin-bottom: 0;
+    margin-left: 0.5rem;
+}
+
 
 /*------------------------------------- Media Queries */
 
